--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+  Copyright (c) 2024 Mo Tiltmann
+  Licensed under the GNU General Public License v3 (GPLv3).
+  See the LICENSE file for details.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
