--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Primenumber Calculator</title>
+  <title>The Sieve of Eratosthenes</title>
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+  <h1>The Sieve of Eratosthenes</h1>  
+  <p>This tool is designed to find prime numbers...</p>  
+  <p>Remove all multiples of the next undisturbed number from the list.</p>  
+  <div class="space"></div>
   <input type="number" placeholder="Type Board Size here and press Enter... " id="Board-Size-Input">
   <button id="Clear-All-Button" onclick="ResetBoard()">Reset Board</button>
-  <div class="space"></div>
+  <div class="small-space"></div>
   <div id="numbermatrix"></div>
   <div class="space"></div>
-  <div class="space"></div>
   <p id="credits">Created by Mo Tiltmann</p>
-
-
+  <p>Github Repository: <a class="link" href="https://github.com/Motipo123/PrimenumberCalculator" target="_blank">Click Here!</a>  </p>
 
 
   <script src="script.js"></script>
