--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
   <h1>The Sieve of Eratosthenes</h1>  
-  <p>This tool is designed to find prime numbers...</p>  
+  <p>This tool is made to find prime numbers...</p>  
   <p>Remove all multiples of the next undisturbed number from the list.</p>  
   <div class="space"></div>
-  <input type="number" placeholder="Type Board Size here and press Enter... " id="Board-Size-Input">
+  <input type="number" placeholder="Type board-size here and press enter... " id="Board-Size-Input">
   <button id="Clear-All-Button" onclick="ResetBoard()">Reset Board</button>
   <div class="small-space"></div>
   <div id="numbermatrix"></div>
