--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <h1>The Sieve of Eratosthenes</h1>  
   <p>This tool is made to find prime numbers...</p>  
-  <p>Remove all multiples of the next undisturbed number from the list.</p>  
+  <p>Remove all multiples of the next not striked number from the list.</p>  
   <div class="space"></div>
   <input type="number" placeholder="Type board-size here and press enter... " id="Board-Size-Input">
   <button id="Clear-All-Button" onclick="ResetBoard()">Reset Board</button>
